# asuka

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
apps/agent-api/: Cargo.toml
apps/agent-api/src/: app.rs  error.rs  main.rs  state.rs
apps/agent-api/src/http/: artifacts.rs  mcp.rs  memory.rs  mod.rs  providers.rs  root.rs  runs.rs  sessions.rs  skills.rs  sse.rs  subagents.rs  tasks.rs  workspace.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  lib.rs  test_support.rs
crates/agent-core/src/config/: mod.rs  models.rs
crates/agent-core/src/core/: artifacts.rs  docs.rs  mcp.rs  memory.rs  mod.rs  providers.rs  runs.rs  service.rs  sessions.rs  skills.rs  subagents.rs  tasks.rs  workspace.rs
crates/agent-core/src/domain/: artifacts.rs  mcp.rs  memory.rs  mod.rs  providers.rs  runs.rs  sessions.rs  skills.rs  status.rs  subagents.rs  tasks.rs  workspace.rs
crates/agent-core/src/memory/: chunking.rs  mod.rs  retrieval.rs  summaries.rs
crates/agent-core/src/memory/chroma/: client.rs  embeddings.rs  mod.rs  records.rs  types.rs
crates/agent-core/src/providers/: mod.rs
crates/agent-core/src/providers/moonshot/: client.rs  messages.rs  types.rs
crates/agent-core/src/providers/openrouter/: client.rs  messages.rs  mod.rs  types.rs
crates/agent-core/src/runtime/: completion.rs  events.rs  executor.rs  failures.rs  mod.rs  prompts.rs  prototype.rs  routing.rs  tool_loop.rs
crates/agent-core/src/storage/: inmemory.rs  mod.rs  seed.rs  traits.rs
crates/agent-core/src/tools/: files.rs  fs_ops.rs  glob.rs  list.rs  mod.rs  registry.rs  ripgrep.rs  todos.rs  types.rs
(+66 files in other folders)
