[package]
name = "agent-api"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../../crates/agent-core" }
anyhow = "=1.0.75"
async-stream = "=0.3.5"
axum = { version = "=0.6.20", features = ["macros"] }
futures-core = "=0.3.31"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
tokio = { version = "=1.35.1", features = ["full"] }
tower-http = { version = "=0.4.4", features = ["cors"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
uuid = { version = "=1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
agent-core = { path = "../../crates/agent-core", features = ["test-support"] }
hyper = { version = "=0.14.32", default-features = false, features = ["http1"] }
tower = "=0.4.13"
